force-app/main/default/objects/Taxi_Booking__c/Taxi_Booking__c.object-meta.xml
<CustomObject>
    <label>Taxi Booking</label>
    <nameField>
        <label>Taxi Booking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxi Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>