force-app/main/default/objects/Taxi_Booking__c/fields/Drop_off_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Drop_off_Date_Time__c</fullName>
    <label>Drop off Date / Time</label>
    <type>DateTime</type>
</CustomField>