force-app/main/default/objects/Taxi_Booking__c/fields/Pickup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date_Time__c</fullName>
    <label>Pickup Date / Time</label>
    <type>DateTime</type>
</CustomField>