force-app/main/default/objects/Taxi_Booking__c/fields/Pickup_Drop_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Drop_Location__c</fullName>
    <label>Pickup / Drop Location</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>