force-app/main/default/objects/Taxi_Booking__c/fields/Route_Details__c.field-meta.xml
<CustomField>
    <fullName>Route_Details__c</fullName>
    <label>Route Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>