force-app/main/default/objects/Taxi_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pickup_Date_Time__c</columns>
    <columns>Drop_off_Date_Time__c</columns>
    <columns>Pickup_Drop_Location__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Taxi Bookings</label>
</ListView>